# poetry

./: .gitpod.Dockerfile  .gitpod.yml  LICENSE  e  meta.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: index.html  objects.inv  search.html  searchindex.js
lichessbot/: lichessbot.py  main.py  pyproject.toml
lichessbot/lichessbot/: util.py
lichessbot/lichessbot/api/: __init__.py
lichessbot/lichessbot/bot/: __init__.py
lichessbot/lichessbotpoetry/: mongodb.py
lichessbot/lichessbotpoetry/api/: __init__.py
lichessbot/lichessbotpoetry/bot/: __init__.py
lichessbot/lichessbotpoetry/server/: __init__.py
lichessbot/tests/: test_lichessbot.py
s/: p
sphinxdocs/: conf.py
sphinxdocs/_build/html/: .buildinfo  genindex.html
test/: main.py  pyproject.toml  pyvenv.cfg
