[tool.poetry]
name = "lichessbot"
version = "0.1.0"
description = ""
authors = ["pythonideas <rustbotchessapp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
python-chess = "^1.999"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
